<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppBackgroundColor"
    tools:context=".ui.fragments.fragments.DiceFragment">


    <TextView
        android:id="@+id/welcome_textView"
        style="@style/titleDiceFrag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/welcome_to_dice_roller"
        android:textAlignment="center"
        android:textSize="25sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002" />

    <TextView
        android:id="@+id/welcome_instructions_textView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:minLines="3"
        android:text="@string/add_dice_or_configure_your_dice_by_tapping_the_buttons_below"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/welcome_textView"
        app:layout_constraintStart_toStartOf="@+id/welcome_textView"
        app:layout_constraintTop_toBottomOf="@+id/welcome_textView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bottom_cardView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:strokeColor="@color/strokeColor"
                android:background="@color/cardBackgroundColor">

                <Button
                    android:id="@+id/roll_dice_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingStart="60dp"
                    android:paddingEnd="60dp"
                    android:text="@string/Roll"
                    android:textSize="12sp"
                    android:backgroundTint="@color/buttonColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </Button>

                <ImageView
                    android:id="@+id/settings_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    app:tint="@color/iconColor"
                    android:src="@drawable/ic_settings"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/roll_dice_button" />

                <ImageView
                    android:id="@+id/decrement_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="250dp"
                    android:src="@drawable/ic_remove"
                    app:tint="@color/iconColor"
                    app:layout_constraintBottom_toBottomOf="@+id/settings_imageView"
                    app:layout_constraintEnd_toStartOf="@+id/increment_imageView"
                    app:layout_constraintStart_toEndOf="@+id/settings_imageView"
                    app:layout_constraintTop_toTopOf="@+id/settings_imageView" />

                <ImageView
                    android:id="@+id/increment_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_add_circle"
                    app:layout_constraintBottom_toBottomOf="@+id/decrement_imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/decrement_imageView"
                    app:layout_constraintTop_toTopOf="@+id/decrement_imageView"
                    app:tint="@color/iconColor"
                    tools:ignore="UseAppTint" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/dice1_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/dice2_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/dice1_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.388"
            app:layout_constraintStart_toEndOf="@+id/dice1_imageView"
            app:layout_constraintTop_toTopOf="@+id/dice1_imageView"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/dice3_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/dice1_imageView"
            app:layout_constraintTop_toBottomOf="@+id/dice1_imageView"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/dice4_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/dice3_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.388"
            app:layout_constraintStart_toEndOf="@+id/dice3_imageView"
            app:layout_constraintTop_toBottomOf="@+id/dice1_imageView"
            app:layout_constraintVertical_bias="1.0"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/total_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/baloo_thambi"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="22sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/bottom_cardView"
            app:layout_constraintEnd_toEndOf="@+id/dice2_imageView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/dice1_imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>